--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.6",
+        "@popperjs/core": "^2.10.2",
         "axios": "^1.6.8",
-        "bootstrap": "^5.2.3",
-        "laravel-mix": "^6.0.6",
+        "bootstrap": "^5.1.3",
+        "laravel-vite-plugin": "^0.2.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "sass": "^1.56.1"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vite": "^2.9.12"
     }
 }
