--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vite": "^2.9.12"
+    },
+    "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^41.3.1"
     }
 }
