--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
         "spatie/laravel-ignition": "^1.0",
-        "squizlabs/php_codesniffer": "^3.10"
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
